--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,49 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
+@article{levchenko2024commentare,
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+  title={Commentare – Leggo Manzoni. Quaranta commenti alla Quarantana (con Giulia Menna e Beatrice Nava, in Italian)},
+  author={Levchenko, Maria, and Menna, Giulia and Nava, Beatrice},
+  publisher={Manzoni e Leopardi in digitale. Idee e strumenti per la scuola, a cura di Ersilia Russo. Bologna, CLUEB},
+  year={2024},
+  note={The article "Commentare – Leggo Manzoni. Quaranta commenti alla Quarantana" presents the project "Leggo Manzoni", a web application offering an interactive reading experience of Alessandro Manzoni's "The Betrothed" (Quarantana edition). The app, developed under the scientific supervision of Paola Italia and Francesca Tomasi, provides 40 critical comments and an illustrative apparatus complementing the text. Aimed at enhancing the teaching of this Italian literary classic, the app integrates digital humanities approaches, allowing for a nuanced interaction with the text and its critical interpretations. The project exemplifies the fusion of traditional literary study with digital technology, offering a resource for both educators and students.},
+  preview={leggo.png}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@article{levchenko_inprogress_mapping,
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  title={Mapping Literary Space: A Social Network from the Timeline of Cultural Events},
+  author={Levchenko, Maria},
+  url={https://mary-lev.github.io/},
+  year={2024},
+  note={This study analyzes the social literary network in Saint Petersburg from 1999 to 2019 using social network analysis (SNA) within the digital humanities framework},
+  preview={communities.jpg}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
+@article{levchenko2021izdatelskie,
+  abbr={Art.},
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+  title={{Издательские стратегии в поле современной русской поэзии / Publishing Strategies in the Field of Contemporary Russian Poetry (in Russian)}},
+  author={Levchenko, Maria},
+  journal={Артикуляция / Artikuljacija},
+  volume={14},
+  year={2021},
+  url={http://articulationproject.net/10303},
+  note={The article discusses the struggles of contemporary Russian poetry publishing, focusing on the sector's reliance on outdated samizdat strategies and its insular, unprofitable nature. It underscores the sector's difficulties with distribution and profitability, pointing to a constrained, self-referential literary community with limited market appeal.},
+  preview={publishing.webp}
+}
+
+@dataset{levchenko_2023_10086515,
+  bibtex_show={true},
+  author={Levchenko, Maria},
+  title={{Literary Events in Saint Petersburg (1999-2019) from SPbLitGuide Newsletters}},
+  year={2023},
+  publisher={Zenodo},
+  version={1.0},
+  doi={10.5281/zenodo.10086515},
+  url={https://doi.org/10.5281/zenodo.10086515},
+  note={This dataset contains the list of literary events in Saint Petersburg from 1999 to 2019, extracted from the SPbLitGuide newsletters. The dataset is used in the study "Mapping Literary Space: A Social Network from the Timeline of Cultural Events" (in progress)},
+  preview={zenodo.png}
 }
